--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "description": "A backend project forms the core of an application, managing data, logic, and interactions between the user interface and the server, ensuring smooth functionality and reliable performance.",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "Kumar",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2"
   }
 }
